@@ -1,4 +1,5 @@
-bin_PROGRAMS =			\
+# Build, but do not install the following test programs:
+noinst_PROGRAMS =		\
 	test_errorstuff		\
 	test_fileloader		\
 	test_memoryloader	\
@@ -6,6 +7,8 @@ bin_PROGRAMS =			\
 	test_version		\
 	test_waveforms
 
-AM_CPPFLAGS = -I$(top_srcdir)/include
-
+# We need to link against our *own* libalut.
 LDADD = ../src/libalut.la
+
+# Specifying the following path is needed to find <AL/alut.h>.
+AM_CPPFLAGS = -I$(top_srcdir)/include
